Changes for 4.0.0alpha3

New features:
...G...... [ZBXNEXT-4216] added 'copytruncate' log file rotation support for logrt[], logrt.count[] (Andris)

Bug fixes:
........S. [ZBX-12643] improved error log message in case Zabbix server database cannot be used due to empty "users" table (vso)
...G...... [ZBX-11720] fixed memory leak which breaks vfs.fs.size, vfs.fs.inode and vfs.dir.size items if compiled with LeakSanitizer (Andris)
........S. [ZBX-13131] fixed truncated multiline text values from network discovery SNMP checks (viktors)
...G...... [ZBX-13117] fixed vfs.dir.size with symbol links on Windows (MVekslers)
....I..... [ZBX-12045] fixed inconsistencies in configure -h output (MVekslers)
A......... [ZBX-13325] fixed trend.get() method with Oracle backend (Sasha)
..F....... [ZBX-13223] fixed graphs duplication in graph preview (ashubin)
..F....... [ZBX-13345] removed SID from URL in screen edit mode (miks)
...G...... [ZBX-13055] fixed problems with DNS resolver interface on NetBSD (valdis)
..F....... [ZBX-13214] added support of \0 matching group for regsub and iregsub methods (gcalenko, Sasha)
........S. [ZBX-13208] eliminated race condition that caused history collection for newly created items to start before preprocecessing steps finished syncing (vso)
...G...... [ZBX-13246] fixed processing of command line arguments which are longer than 2KB for proc.num and proc.mem items on AIX (viktors)
.......P.. [ZBX-13130] fixed Zabbix proxy not to generate high network traffic when server does not accept data (vso)
..F....... [ZBX-13288] fixed image ghosting for mass update of map elements (vjaceslavs)
...G...... [ZBX-11422] fixed compilation warnings under OS X 64bit (MVekslers)

--------------------------------------------------------------------------------
Changes for 4.0.0alpha2

New features:
..F....... [ZBXNEXT-4144] added asterisk mark and aria-label property to all forms required fields (gcalenko, Ivo)